Various minor tweaks

--- a/cv.tex
+++ b/cv.tex
@@ -192,7 +192,7 @@ M.\,A.\,al-Badri, EBL, D.\,J.\,Cole, and C.\,Weber, \textit{Renormalization of h
 \end{table}
 
 \begin{table}[!t]
-\begin{tabularx}{\textwidth}{l m{0.6\columnwidth} l l}
+\begin{tabularx}{\textwidth}{l X l l}
 \rowcolor{seaborn_blue}
 \multicolumn{4}{l}{\large\textcolor{white}{\textbf{Conferences, Schools, and Workshops}}} \\
 \textbf{Year}& \textbf{Event} & \textbf{Location} & \textbf{Contribution} \\
@@ -231,7 +231,7 @@ Some experience & C++, MATLAB, CUDA & \\
 \rowcolor{white}
 \multicolumn{3}{X}{I am a developer of \href{https://www.onetep.org}{ONETEP}, a commercially available scientific DFT code, and TOSCAM, a publically available DMFT code} \\
 \rowcolor{white}
-\multicolumn{3}{X}{I participated in \href{https://hashcode.withgoogle.com/}{Google Hash Code 2018}, as well as sporadically competing on \href{https://projecteuler.net/}{Project Euler} and \href{https://www.codingame.com/home}{CodinGame}} \\
+\multicolumn{3}{X}{I participated in \href{https://hashcode.withgoogle.com/}{Google Hash Code 2018}. I sporadically compete on \href{https://projecteuler.net/}{Project Euler} and \href{https://www.codingame.com/home}{CodinGame}} \\
 \rowcolor{seaborn_bg_grey} 
 \multicolumn{3}{X}{\textbf{\textit{Packages and Software}}} \\
 \rowcolor{seaborn_bg_grey}
@@ -263,9 +263,9 @@ Some experience & CASTEP, Siesta, Maestro & \\
 \rowcolor{seaborn_bg_grey}
 \multicolumn{3}{X}{During the course of my PhD I have provided support to two students.} \\
 \rowcolor{seaborn_bg_grey}
-\multicolumn{3}{X}{I have spent a significant amount of time with M.\,A.\,Al-Badri (Masters, and then PhD student from King's College London), teaching him about DMFT and working with him on DMFT calculations on hemocyanin. I have hosted him in Cambridge twice, and visited him at KCL repeatedly.} \\
+\multicolumn{3}{X}{I have spent a significant amount of time with M.\,A.\,Al-Badri (Masters, and then PhD student from King's College London), teaching him about DMFT and working with him on DMFT calculations on hemocyanin. I have hosted him in Cambridge twice, and visited him at KCL periodically.} \\
 \rowcolor{seaborn_bg_grey}
-\multicolumn{3}{X}{I have been the local port-of-call for S. Mansour (PhD student, Cambridge) regarding ONETEP, and have periodically helped her with her work.}
+\multicolumn{3}{X}{I have been the local port-of-call for S. Mansour (PhD student, Cambridge) for technical ONETEP support.}
 \end{tabularx}
 \end{table}
 %
@@ -274,7 +274,7 @@ Some experience & CASTEP, Siesta, Maestro & \\
 \begin{tabularx}{\textwidth}{X}
 \rowcolor{seaborn_blue}
 \multicolumn{1}{l}{\large\textcolor{white}{\textbf{Interests}}} \\
-I am a violinist, and have been a member (and concertmaster) of many orchestras including the New Zealand Symphony Secondary Schools Orchestra, the Christchurch Youth Orchestra, and the Cambridge Musical Society Symphony Orchestra. I love the outdoors and am an avid runner, cyclist, camper, and hiker.
+I am a violinist, and have been a member (and concertmaster) of many orchestras including the New Zealand Symphony Secondary Schools Orchestra, the Christchurch Youth Orchestra, and the Cambridge Musical Society Symphony Orchestra. I love the outdoors and am an avid runner, cyclist, camper, and hiker.%  I enjoy pub quizzes (having run several for my college's postgraduate community)
 \end{tabularx}
 \end{table}
 %
