Fixed inconsistency between employment and professional experience titles

--- a/cv.tex
+++ b/cv.tex
@@ -97,7 +97,7 @@ Designed to lead into my PhD, my masters project motivated the need for models o
    \textit{Supervisor:} Prof. P. Blair Blakie
 }\\
 \multicolumn{5}{X}{\rowcolor{seaborn_bg_grey}
-This one-year honours programme comprised of taught courses in physics and a research project. My research project explored the effects of temperature on the behaviour of quasi-2D dipolar Bose-Einstein condensates; that is, BECs whose atoms (a) interact with an appreciable magnetic dipole-dipole moment and (b) are contained within a 2D optical trap. (See the ``Employment" section for the outcome of this research.)
+This one-year honours programme comprised of taught courses in physics and a research project. My research project explored the effects of temperature on the behaviour of quasi-2D dipolar Bose-Einstein condensates; that is, BECs whose atoms (a) interact with an appreciable magnetic dipole-dipole moment and (b) are contained within a 2D optical trap. (See the ``Professional Experience" section for the outcome of this research.)
 }\\
 %
 % BSc
