Update for goings-on in 2019-20

--- a/seaborn_colours.tex
+++ b/seaborn_colours.tex
@@ -1,5 +1,6 @@
 % Definitions of colours used in seaborn for use in latex
 \definecolor{seaborn_bg_grey}             {HTML}{eaeaf2}
+\definecolor{seaborn_bg_grey_half}        {HTML}{f4f4f8}
  
 \definecolor{seaborn_blue}                {HTML}{4c72b0}
 \definecolor{seaborn_green}               {HTML}{55a868}
